--- a/package.json
+++ b/package.json
@@ -12,14 +12,12 @@
     "@emotion/react": "^11.8.1",
     "@emotion/styled": "^11.8.1",
     "@types/aos": "^3.0.4",
-    "@types/react-router-hash-link": "^2.4.5",
     "aos": "^2.3.4",
     "framer-motion": "^6.2.8",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
-    "react-router-dom": "^6.2.1",
-    "react-router-hash-link": "^2.4.3"
+    "react-router-dom": "^6.2.1"
   },
   "devDependencies": {
     "@types/react": "^17.0.33",
